--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ matrix:
     env: PUPPET_GEM_VERSION="~> 4.8.0" FACTER_GEM_VERSION="~> 2.4" HIERA_GEM_VERSION="~> 3.2.0"
   - rvm: 2.1.9
     env: PUPPET_GEM_VERSION="~> 4.9.0" FACTER_GEM_VERSION="~> 2.4" HIERA_GEM_VERSION="~> 3.3.0"
-
+  - rvm: 2.2.0
+    env: PUPPET_GEM_VERSION="4.7.0" FACTER_GEM_VERSION="~> 2.4.6" HIERA_GEM_VERSION="~> 3.2.1"
 deploy:
   provider: puppetforge
   user: abstractit
